[project]
name = "lg-utils"
version = "0.1.0"
description = "LangGraph utility functions and common patterns"
readme = "README.md"
authors = [
    { name = "kuanpern", email = "kptan86@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
